[package]
name = "binary_tree"
version = "0.1.0"
edition = "2021"
description = "simple search binary tree implementation in rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "binary_tree"
crate-type = ["lib"]