[package]
name = "mikel_binary_tree"
version = "0.1.6"
edition = "2021"
description = "Simple search binary tree implementation"
license = "MIT OR Apache-2.0"

homepage = "https://github.com/apesteguia/binary_tree.git"
repository = "https://github.com/apesteguia/binary-tree"
keywords = [
  "binary",
  "binary-tree", 
  "tree",
  "binary-tree-view"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "binary_tree"
crate-type = ["lib"]
